Elementi di topologia di R
Palle circolari, Cantor, proprietà insiemi aperti e chiusi

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,3 +1,8 @@
 {
-  "theme": "moonstone"
+  "theme": "moonstone",
+  "cssTheme": "Big Sur Aesthetic",
+  "translucency": false,
+  "enabledCssSnippets": [
+    "center_image"
+  ]
 }
