--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Algebra lineare/Introduzione/Numeri Complessi.md",
+            "file": "Calcolo 1/Elementi di topologia di R.md",
             "mode": "source",
             "source": false
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Algebra lineare/Introduzione/Numeri Complessi.md",
+                "file": "Calcolo 1/Elementi di topologia di R.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Algebra lineare/Introduzione/Numeri Complessi.md",
+                "file": "Calcolo 1/Elementi di topologia di R.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Algebra lineare/Introduzione/Numeri Complessi.md"
+                "file": "Calcolo 1/Elementi di topologia di R.md"
               }
             }
           }
@@ -128,6 +128,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "48860d8e2975699a",
-  "lastOpenFiles": []
+  "active": "a1163d9af64d6878",
+  "lastOpenFiles": [
+    "!Teorema.md",
+    "Calcolo 1/Elementi di topologia di R.md",
+    "Calcolo 1/Assiomi dei numeri reali.md",
+    "Calcolo 1/images/Intervallo.svg",
+    "Calcolo 1/Simbologia.md",
+    "Calcolo 1/Insiemistica.md",
+    "Matematica discreta/Introduzione/Grandezze ed Enunciati.md",
+    "Architettura degli elaboratori/Rappresentazione dell'informazione.md",
+    "Architettura degli elaboratori/Introduzione/Architettura base del computer.md",
+    "Algebra lineare/Introduzione/Numeri Complessi.md"
+  ]
 }
