--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Calcolo 1/Elementi di topologia di R.md",
+            "file": "Matematica discreta/La Logica.md",
             "mode": "source",
             "source": false
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Calcolo 1/Elementi di topologia di R.md",
+                "file": "Matematica discreta/La Logica.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Calcolo 1/Elementi di topologia di R.md",
+                "file": "Matematica discreta/La Logica.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Calcolo 1/Elementi di topologia di R.md"
+                "file": "Matematica discreta/La Logica.md"
               }
             }
           }
@@ -128,17 +128,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "a1163d9af64d6878",
+  "active": "48860d8e2975699a",
   "lastOpenFiles": [
-    "Calcolo 1/Esercizi/Esercizi di topologia.md",
-    "Calcolo 1/Elementi di topologia di R.md",
-    "Calcolo 1/Simbologia.md",
-    "Calcolo 1/Insiemistica.md",
-    "Calcolo 1/Assiomi dei numeri reali.md",
-    "Algebra lineare/Introduzione/Numeri Complessi.md",
-    "Matematica discreta/Introduzione/Grandezze ed Enunciati.md",
+    "Architettura degli elaboratori/Rappresentazione dell'informazione.md",
+    "Architettura degli elaboratori/Introduzione/Architettura base del computer.md",
+    "Architettura degli elaboratori/Images/Dec_Bin.svg",
+    "Matematica discreta/La Logica.md",
+    "Matematica discreta/Images/tabella verità se e solo se.png",
     "Matematica discreta/Introduzione/Dimostrazioni.md",
-    "Matematica discreta/Introduzione/Calcolo Combinatorio.md",
-    "!Teorema.md"
+    "Matematica discreta/Images/De Morgan.png",
+    "Matematica discreta/Images/tabella verità and or not.png",
+    "tabella verità and or not.png.md",
+    "Calcolo 1/Simbologia.md"
   ]
 }
