(AL): Piano complesso, (IP): Esercizi, (MD): Quantificatori

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -4,5 +4,6 @@
     "it",
     "en-US"
   ],
-  "fileSortOrder": "byModifiedTimeReverse"
+  "fileSortOrder": "byModifiedTimeReverse",
+  "promptDelete": false
 }
