--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Matematica discreta/La Logica.md",
+            "file": "Algebra lineare/Introduzione/Numeri Complessi.md",
             "mode": "source",
             "source": false
           }
@@ -61,7 +61,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 300,
+    "collapsed": true
   },
   "right": {
     "id": "282a9548711da6a0",
@@ -77,7 +78,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Matematica discreta/La Logica.md",
+                "file": "Algebra lineare/Introduzione/Numeri Complessi.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +95,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Matematica discreta/La Logica.md",
+                "file": "Algebra lineare/Introduzione/Numeri Complessi.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +118,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Matematica discreta/La Logica.md"
+                "file": "Algebra lineare/Introduzione/Numeri Complessi.md"
               }
             }
           }
@@ -130,15 +131,15 @@
   },
   "active": "48860d8e2975699a",
   "lastOpenFiles": [
+    "Algebra lineare/Images/Piano complesso.svg",
+    "Algebra lineare/Introduzione/Numeri Complessi.md",
+    "Algebra lineare/Introduzione/Untitled.md",
+    "Matematica discreta/La Logica.md",
     "Architettura degli elaboratori/Rappresentazione dell'informazione.md",
     "Architettura degli elaboratori/Introduzione/Architettura base del computer.md",
     "Architettura degli elaboratori/Images/Dec_Bin.svg",
-    "Matematica discreta/La Logica.md",
     "Matematica discreta/Images/tabella verità se e solo se.png",
     "Matematica discreta/Introduzione/Dimostrazioni.md",
-    "Matematica discreta/Images/De Morgan.png",
-    "Matematica discreta/Images/tabella verità and or not.png",
-    "tabella verità and or not.png.md",
-    "Calcolo 1/Simbologia.md"
+    "Matematica discreta/Images/De Morgan.png"
   ]
 }
