--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Algebra lineare/Introduzione/Numeri Complessi.md",
+            "file": "Calcolo 1/Funzioni/Cos'è una funzione.md",
             "mode": "source",
             "source": false
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "pall",
+                "query": "chiuso",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -61,8 +61,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300,
-    "collapsed": true
+    "width": 300
   },
   "right": {
     "id": "282a9548711da6a0",
@@ -78,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Algebra lineare/Introduzione/Numeri Complessi.md",
+                "file": "Calcolo 1/Funzioni/Cos'è una funzione.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -95,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Algebra lineare/Introduzione/Numeri Complessi.md",
+                "file": "Calcolo 1/Funzioni/Cos'è una funzione.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -118,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Algebra lineare/Introduzione/Numeri Complessi.md"
+                "file": "Calcolo 1/Funzioni/Cos'è una funzione.md"
               }
             }
           }
@@ -131,15 +130,15 @@
   },
   "active": "48860d8e2975699a",
   "lastOpenFiles": [
-    "Algebra lineare/Images/Piano complesso.svg",
-    "Algebra lineare/Introduzione/Numeri Complessi.md",
-    "Algebra lineare/Introduzione/Untitled.md",
+    "Calcolo 1/Insiemistica/Simbologia.md",
+    "Calcolo 1/Funzioni/Cos'è una funzione.md",
+    "Calcolo 1/Insiemistica/Elementi di topologia di R.md",
+    "Calcolo 1/Insiemistica/Cardinalità e numerabilità.md",
+    "Calcolo 1/Insiemistica/Insiemi.md",
+    "Calcolo 1/Insiemistica/Assiomi dei numeri reali.md",
     "Matematica discreta/La Logica.md",
-    "Architettura degli elaboratori/Rappresentazione dell'informazione.md",
-    "Architettura degli elaboratori/Introduzione/Architettura base del computer.md",
-    "Architettura degli elaboratori/Images/Dec_Bin.svg",
-    "Matematica discreta/Images/tabella verità se e solo se.png",
-    "Matematica discreta/Introduzione/Dimostrazioni.md",
-    "Matematica discreta/Images/De Morgan.png"
+    "Algebra lineare/Introduzione/Numeri Complessi.md",
+    "Algebra lineare/Images/Piano complesso.svg",
+    "Algebra lineare/Introduzione/Untitled.md"
   ]
 }
