--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Architettura degli elaboratori/Rappresentazione dell'informazione/Complemento a 2.md",
+            "file": "Calcolo 1/Funzioni/Operazioni tra funzioni.md",
             "mode": "source",
             "source": false
           }
@@ -61,7 +61,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 300,
+    "collapsed": true
   },
   "right": {
     "id": "282a9548711da6a0",
@@ -77,7 +78,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Architettura degli elaboratori/Rappresentazione dell'informazione/Complemento a 2.md",
+                "file": "Calcolo 1/Funzioni/Operazioni tra funzioni.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +95,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Architettura degli elaboratori/Rappresentazione dell'informazione/Complemento a 2.md",
+                "file": "Calcolo 1/Funzioni/Operazioni tra funzioni.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +118,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Architettura degli elaboratori/Rappresentazione dell'informazione/Complemento a 2.md"
+                "file": "Calcolo 1/Funzioni/Operazioni tra funzioni.md"
               }
             }
           }
@@ -130,15 +131,15 @@
   },
   "active": "48860d8e2975699a",
   "lastOpenFiles": [
+    "Calcolo 1/Funzioni/Cos'è una funzione.md",
+    "Calcolo 1/Funzioni/Operazioni tra funzioni.md",
+    "Calcolo 1/Images/Controimmagine_es2.png",
+    "Calcolo 1/Images/controimmagine_es1.png",
+    "Calcolo 1/Images/controimmagine_es1 1.png",
+    "Architettura degli elaboratori/Rappresentazione dell'informazione/Complemento a 2.md",
     "Calcolo 1/Insiemistica/Elementi di topologia di R.md",
     "Calcolo 1/Insiemistica/Insiemi.md",
     "Calcolo 1/Insiemistica/Simbologia.md",
-    "Calcolo 1/Insiemistica/Assiomi dei numeri reali.md",
-    "Architettura degli elaboratori/Rappresentazione dell'informazione/Complemento a 2.md",
-    "Architettura degli elaboratori/Rappresentazione dell'informazione/Conversioni.md",
-    "Calcolo 1/Funzioni/Cos'è una funzione.md",
-    "Calcolo 1/Insiemistica/Cardinalità e numerabilità.md",
-    "Architettura degli elaboratori/Introduzione/Architettura base del computer.md",
-    "Matematica discreta/Introduzione/Grandezze ed Enunciati.md"
+    "Calcolo 1/Insiemistica/Assiomi dei numeri reali.md"
   ]
 }
