--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -5,5 +5,6 @@
     "en-US"
   ],
   "fileSortOrder": "byModifiedTimeReverse",
-  "promptDelete": false
+  "promptDelete": false,
+  "attachmentFolderPath": "Calcolo 1/Images"
 }
