(C): Conclusione funzioni elementari

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -6,5 +6,6 @@
   ],
   "fileSortOrder": "byModifiedTimeReverse",
   "promptDelete": false,
-  "attachmentFolderPath": "Calcolo 1/Images"
+  "attachmentFolderPath": "Calcolo 1/Images",
+  "vimMode": false
 }
