--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -6,7 +6,7 @@
     "center_image"
   ],
   "baseFontSize": 15,
-  "accentColor": "#ffd294",
+  "accentColor": "",
   "showViewHeader": false,
   "nativeMenus": false
 }
