(C2): curve parametriche; (PEL): bubble sort, classi

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -8,5 +8,6 @@
   "promptDelete": false,
   "attachmentFolderPath": "Calcolo 1/Images",
   "vimMode": false,
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "showUnsupportedFiles": false
 }
