(BD1), (PS): introduzione

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,9 +1,6 @@
 {
   "spellcheck": true,
-  "spellcheckLanguages": [
-    "it",
-    "en-US"
-  ],
+  "spellcheckLanguages": null,
   "fileSortOrder": "byModifiedTimeReverse",
   "promptDelete": false,
   "attachmentFolderPath": "Calcolo 1/Images",
