(SO1): multiprogrammazione a partizioni fisse

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -6,5 +6,6 @@
   "attachmentFolderPath": "Calcolo 1/Images",
   "vimMode": false,
   "alwaysUpdateLinks": true,
-  "showUnsupportedFiles": false
+  "showUnsupportedFiles": false,
+  "showLineNumber": false
 }
