(ASD2): alberi binari di ricerca; (PES): distribuzioni note

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -7,5 +7,12 @@
   "vimMode": false,
   "alwaysUpdateLinks": true,
   "showUnsupportedFiles": false,
-  "showLineNumber": false
+  "showLineNumber": false,
+  "pdfExportSettings": {
+    "includeName": true,
+    "pageSize": "Letter",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  }
 }
