(ASD1), (ASD2), (PES), (PO1)
ASD1: esempio 3° caso teorema master
ASD2: vantaggi/svantaggi heapsort
PES: corretta disuguagliazna di Chebyshev
PO1: aggiunti gli effetti dei modificatori sui vari componenti

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -9,11 +9,11 @@
   "showUnsupportedFiles": false,
   "showLineNumber": false,
   "pdfExportSettings": {
-    "includeName": true,
-    "pageSize": "Letter",
+    "includeName": false,
+    "pageSize": "A4",
     "landscape": false,
     "margin": "0",
-    "downscalePercent": 100
+    "downscalePercent": 30
   },
   "readableLineLength": true
 }
