--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -13,7 +13,8 @@
     "pageSize": "A4",
     "landscape": false,
     "margin": "0",
-    "downscalePercent": 63
+    "downscalePercent": 45
   },
-  "readableLineLength": true
+  "readableLineLength": true,
+  "strictLineBreaks": false
 }
