--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -3,8 +3,8 @@
   "cssTheme": "Big Sur Aesthetic",
   "translucency": false,
   "enabledCssSnippets": [
-    "center_image",
-    "mathjax_size"
+    "mathjax_size",
+    "center_image"
   ],
   "baseFontSize": 19,
   "accentColor": "",
